--- a/Spingboot_Backend/demo-springboot-with-GraphQL/build.gradle
+++ b/Spingboot_Backend/demo-springboot-with-GraphQL/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:11.1.0'
 }
 
 tasks.named('test') {
