--- a/Flutter_App/iaprediction/pubspec.yaml
+++ b/Flutter_App/iaprediction/pubspec.yaml
@@ -29,14 +29,25 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
-  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
+  graphql_flutter: ^5.1.2
+  http: ^1.2.1
+  mat_month_picker_dialog: ^1.1.2
+  provider: ^6.1.2
+  syncfusion_flutter_charts: ^25.2.5
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
