--- a/Astro_Front/package.json
+++ b/Astro_Front/package.json
@@ -12,6 +12,7 @@
     "sst:dev": "sst dev"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.5",
     "@astrojs/check": "^0.7.0",
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.4.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^4.9.2",
     "astro-aws-amplify": "^0.1.0",
+    "graphql": "^16.8.2",
     "jquery": "^3.7.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
