--- a/Astro_Front/package.json
+++ b/Astro_Front/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+   "test": "cypress open --env host=0.0.0.0",
     "dev": "sst bind astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
@@ -12,7 +13,6 @@
     "sst:dev": "sst dev"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.5",
     "@astrojs/check": "^0.7.0",
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.4.0",
@@ -21,8 +21,8 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^4.9.2",
     "astro-aws-amplify": "^0.1.0",
-    "graphql": "^16.8.2",
     "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -39,6 +39,7 @@
     "astro-sst": "^2.42.0",
     "aws-cdk-lib": "2.143.0",
     "constructs": "10.3.0",
+    "cypress": "^13.11.0",
     "prettier": "^3.2.2",
     "prettier-plugin-astro": "^0.14.0",
     "sst": "^2.42.0"
